--- a/Awesome/Resource/Storyboards/Setting.storyboard
+++ b/Awesome/Resource/Storyboards/Setting.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,41 +35,11 @@
                                             <action selector="backButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="tAf-6X-1hn"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oRU-DF-hHn">
-                                        <rect key="frame" x="336" y="31.5" width="48" height="48"/>
-                                        <state key="normal" backgroundImage="linkShareButton"/>
-                                        <connections>
-                                            <action selector="inviteButtonClicked:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="VaY-7b-qdW"/>
-                                        </connections>
-                                    </button>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oSi-2q-hrl">
-                                        <rect key="frame" x="225" y="31.5" width="96" height="48"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7h-Rd-m2b">
-                                                <rect key="frame" x="5" y="14" width="86" height="20.5"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="48" id="5hH-x9-qeM"/>
-                                            <constraint firstAttribute="trailing" secondItem="q7h-Rd-m2b" secondAttribute="trailing" constant="5" id="AIW-sP-6wZ"/>
-                                            <constraint firstItem="q7h-Rd-m2b" firstAttribute="centerY" secondItem="oSi-2q-hrl" secondAttribute="centerY" id="cBh-Zp-F3R"/>
-                                            <constraint firstAttribute="width" constant="96" id="rkj-qY-cHn"/>
-                                            <constraint firstItem="q7h-Rd-m2b" firstAttribute="leading" secondItem="oSi-2q-hrl" secondAttribute="leading" constant="5" id="v4y-p5-aMv"/>
-                                        </constraints>
-                                    </view>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="oRU-DF-hHn" secondAttribute="trailing" constant="30" id="7wB-zU-qL9"/>
                                     <constraint firstItem="UuA-Sw-XgJ" firstAttribute="top" secondItem="pgG-ZI-uM9" secondAttribute="top" constant="45" id="EJa-ma-4YN"/>
-                                    <constraint firstItem="oRU-DF-hHn" firstAttribute="centerY" secondItem="UuA-Sw-XgJ" secondAttribute="centerY" id="Imp-UB-kV4"/>
-                                    <constraint firstItem="oSi-2q-hrl" firstAttribute="centerY" secondItem="UuA-Sw-XgJ" secondAttribute="centerY" id="Mn4-it-fF3"/>
                                     <constraint firstAttribute="height" constant="100" id="ZPx-aV-dls"/>
-                                    <constraint firstItem="oRU-DF-hHn" firstAttribute="leading" secondItem="oSi-2q-hrl" secondAttribute="trailing" constant="15" id="aMn-jk-Wdp"/>
                                     <constraint firstItem="UuA-Sw-XgJ" firstAttribute="leading" secondItem="pgG-ZI-uM9" secondAttribute="leading" constant="30" id="jjL-Po-QAm"/>
                                 </constraints>
                             </view>
@@ -82,13 +53,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="링크 공유" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2lG-bo-P3m">
-                                        <rect key="frame" x="20" y="20" width="75" height="18"/>
+                                        <rect key="frame" x="20" y="20" width="74.5" height="18"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="나의 어떰 프로필을 공유합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0S-IF-uyZ">
-                                        <rect key="frame" x="20" y="43" width="190" height="15"/>
+                                        <rect key="frame" x="20" y="43" width="190" height="14.5"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFLight" family="Gmarket Sans TTF" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -123,7 +94,7 @@
                                         </connections>
                                     </switch>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="앱에서 알림을 전송합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0mr-bt-iXt">
-                                        <rect key="frame" x="20" y="43" width="159" height="15"/>
+                                        <rect key="frame" x="20" y="43" width="159" height="14.5"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFLight" family="Gmarket Sans TTF" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -150,13 +121,13 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="로그아웃" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHg-ZK-Gtl">
-                                        <rect key="frame" x="20" y="20" width="70" height="18"/>
+                                        <rect key="frame" x="20" y="20" width="69.5" height="18"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFMedium" family="Gmarket Sans TTF" pointSize="18"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="앱에서 로그아웃 합니다." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9qx-tI-ui4">
-                                        <rect key="frame" x="20" y="43" width="146" height="15"/>
+                                        <rect key="frame" x="20" y="43" width="146" height="14.5"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFLight" family="Gmarket Sans TTF" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -185,7 +156,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어떰에서의 모든 기록을 삭제합니다. 😥" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Mx-vc-EO8">
-                                        <rect key="frame" x="20" y="43" width="240" height="15"/>
+                                        <rect key="frame" x="20" y="43" width="240" height="14.5"/>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFLight" family="Gmarket Sans TTF" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -236,8 +207,6 @@
                         <outlet property="LogoutView" destination="Sqq-HF-YlZ" id="GVU-ie-ftB"/>
                         <outlet property="backGroundView" destination="5EZ-qb-Rvc" id="3tQ-iQ-z6K"/>
                         <outlet property="headerView" destination="pgG-ZI-uM9" id="oYN-ty-Fwx"/>
-                        <outlet property="leftInviteLabel" destination="q7h-Rd-m2b" id="UyO-OB-H42"/>
-                        <outlet property="leftInviteView" destination="oSi-2q-hrl" id="cja-Ml-DRP"/>
                         <outlet property="linkShareButton" destination="IMC-cL-Myf" id="9qB-w0-bJ2"/>
                         <outlet property="linkshareView" destination="gej-ar-IMm" id="Ht8-as-ovI"/>
                         <outlet property="notificationView" destination="IKM-Ir-Cwl" id="lI1-fq-jWj"/>
@@ -270,7 +239,6 @@
     </scenes>
     <resources>
         <image name="backButton2" width="12" height="21"/>
-        <image name="linkShareButton" width="48" height="48"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
