--- a/Awesome/Resource/Storyboards/Home.storyboard
+++ b/Awesome/Resource/Storyboards/Home.storyboard
@@ -32,8 +32,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="none" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ea2-FY-yjl">
-                                        <rect key="frame" x="45" y="20" width="66.5" height="25"/>
+                                        <rect key="frame" x="45" y="20" width="200" height="25"/>
                                         <constraints>
+                                            <constraint firstAttribute="width" constant="200" id="5eQ-uZ-0gY"/>
                                             <constraint firstAttribute="height" constant="25" id="N3l-Xu-zU4"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="GmarketSansTTFBold" family="Gmarket Sans TTF" pointSize="24"/>
